--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -27,16 +27,19 @@ jobs:
 
     - name: Run tests
       run: flutter test
-
+      env:
+        FIREBASE_OPTIONS_DART_DEV: ${{ secrets.FIREBASE_OPTIONS_DART_DEV }}
     - name: Build Android APK
       run: flutter build apk --release
       env:
         GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON_DEV }}
+        FIREBASE_OPTIONS_DART_DEV: ${{ secrets.FIREBASE_OPTIONS_DART_DEV }}
 
     - name: Build iOS App
       run: flutter build ios --release
       env:
         GOOGLE_SERVICE_INFO_PLIST: ${{ secrets.GOOGLE_SERVICE_INFO_PLIST_DEV }}
+        FIREBASE_OPTIONS_DART_DEV: ${{ secrets.FIREBASE_OPTIONS_DART_DEV }}
 
     - name: Upload build artifacts (APK)
       uses: actions/upload-artifact@v2
