--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -19,11 +19,11 @@ jobs:
     - name: Install jq (required by flutter-action)
       run: |
         brew install jq
-        
+
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: 'stable'  # You can specify a version if needed
+        flutter-version: '3.5.4'  # You can specify a version if needed
 
     - name: Install dependencies
       run: flutter pub get
