--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -9,8 +9,8 @@ on:
       - dev
 
 jobs:
-  build:
-    runs-on: [self-hosted, macos] # For iOS, use your self-hosted macOS runner
+  build_ios:
+    runs-on: [self-hosted, macos]
 
     steps:
     - name: Checkout code
@@ -33,17 +33,7 @@ jobs:
     - name: Install dependencies
       run: flutter pub get
 
-    - name: DEV Build Android APK
-      run: flutter build apk --release \
-        --dart-define=HOST_ADDRESS=10.0.0.176 \
-        --dart-define=PORT=8080 \
-        --dart-define=USE_EMULATOR=true \
-        --dart-define=EMULATOR_PORT=9099
-        --dart-define=FIREBASE_OPTIONS_DART_DEV=${{ secrets.FIREBASE_OPTIONS_DART_DEV_ANDROID }} \
-        --dart-define=GOOGLE_SERVICES_JSON_DEV=${{ secrets.GOOGLE_SERVICES_JSON_DEV }}
-      env:
-        GOOGLE_SERVICES_JSON_DEV: ${{ secrets.GOOGLE_SERVICES_JSON_DEV }}
-        FIREBASE_OPTIONS_DART_DEV: ${{ secrets.FIREBASE_OPTIONS_DART_DEV_ANDROID }}
+
 
     - name: DEV Build iOS App 
       run: flutter build ios --release \
@@ -57,14 +47,54 @@ jobs:
         GOOGLE_SERVICE_INFO_PLIST_DEV: ${{ secrets.GOOGLE_SERVICE_INFO_PLIST_DEV }}
         FIREBASE_OPTIONS_DART_DEV: ${{ secrets.FIREBASE_OPTIONS_DART_DEV_IOS }}
 
-    - name: Upload build artifacts (APK)
-      uses: actions/upload-artifact@v3
-      with:
-        name: android-apk
-        path: build/app/outputs/flutter-apk/app-release.apk
 
     - name: Upload build artifacts (iOS)
       uses: actions/upload-artifact@v3
       with:
         name: ios-app
         path: build/ios/iphoneos/Runner.app
+
+  build_android:
+    runs-on: [self-hosted, X64]
+
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Install jq (required by flutter-action)
+      run: |
+        brew install jq
+
+    - name: Set up Flutter
+      run: |
+        # Install Flutter manually to ensure we get the correct version
+        git clone https://github.com/flutter/flutter.git -b stable --depth 1
+        export PATH="$PATH:`pwd`/flutter/bin"
+        flutter doctor
+        flutter --version
+        env:
+        flutter-version: '3.5.4'
+    
+    - name: Install dependencies
+      run: flutter pub get
+    
+
+    - name: DEV Build Android APK
+      run: |
+        flutter build apk --release \
+        --dart-define=HOST_ADDRESS=10.0.0.176 \
+        --dart-define=PORT=8080 \
+        --dart-define=USE_EMULATOR=true \
+        --dart-define=EMULATOR_PORT=9099
+        --dart-define=FIREBASE_OPTIONS_DART_DEV=${{ secrets.FIREBASE_OPTIONS_DART_DEV_ANDROID }} \
+        --dart-define=GOOGLE_SERVICES_JSON_DEV=${{ secrets.GOOGLE_SERVICES_JSON_DEV }}
+      env:
+        GOOGLE_SERVICES_JSON_DEV: ${{ secrets.GOOGLE_SERVICES_JSON_DEV }}
+        FIREBASE_OPTIONS_DART_DEV: ${{ secrets.FIREBASE_OPTIONS_DART_DEV_ANDROID }}
+
+    - name: Upload build artifacts (APK)
+      uses: actions/upload-artifact@v3
+      with:
+        name: android-apk
+        path: build/app/outputs/flutter-apk/app-release.apk
