--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -40,11 +40,11 @@ jobs:
         --dart-define=HOST_ADDRESS=10.0.0.176 \
         --dart-define=PORT=8080 \
         --dart-define=USE_EMULATOR=true \
-        --dart-define=EMULATOR_PORT=9099
+        --dart-define=EMULATOR_PORT=9099 \
         --dart-define=FIREBASE_OPTIONS_DART_DEV=${{ secrets.FIREBASE_OPTIONS_DART_DEV_IOS }} \
-        --dart-define=GOOGLE_SERVICE_INFO_PLIST_DEV=${{ secrets.GOOGLE_SERVICE_INFO_PLIST_DEV }}
+        --dart-define=GOOGLE_SERVICE_INFO_PLIST_DEV=${{ secrets.GOOGLESERVICE_INFO_PLIST_DEV }}
       env:
-        GOOGLE_SERVICE_INFO_PLIST_DEV: ${{ secrets.GOOGLE_SERVICE_INFO_PLIST_DEV }}
+        GOOGLE_SERVICE_INFO_PLIST_DEV: ${{ secrets.GOOGLESERVICE_INFO_PLIST_DEV }}
         FIREBASE_OPTIONS_DART_DEV: ${{ secrets.FIREBASE_OPTIONS_DART_DEV_IOS }}
 
 
@@ -86,7 +86,7 @@ jobs:
         --dart-define=HOST_ADDRESS=10.0.0.176 \
         --dart-define=PORT=8080 \
         --dart-define=USE_EMULATOR=true \
-        --dart-define=EMULATOR_PORT=9099
+        --dart-define=EMULATOR_PORT=9099 \
         --dart-define=FIREBASE_OPTIONS_DART_DEV=${{ secrets.FIREBASE_OPTIONS_DART_DEV_ANDROID }} \
         --dart-define=GOOGLE_SERVICES_JSON_DEV=${{ secrets.GOOGLE_SERVICES_JSON_DEV }}
       env:
