--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -11,7 +11,6 @@ on:
 jobs:
   build_ios:
     runs-on: [self-hosted, macos]
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -36,11 +35,7 @@ jobs:
 
 
     - name: DEV Build iOS App 
-      run: flutter build ios --release \
-        --dart-define=HOST_ADDRESS=10.0.0.176 \
-        --dart-define=SERVER_PORT=8080 \
-        --dart-define=USE_EMULATOR=true \
-        --dart-define=EMULATOR_PORT=9099
+      run: flutter build ios --release --dart-define=HOST_ADDRESS=10.0.0.176 --dart-define=SERVER_PORT=8080 --dart-define=USE_EMULATOR=true --dart-define=EMULATOR_PORT=9099
       env:
         GOOGLESERVICE_INFO_PLIST_DEV: ${{ secrets.GOOGLESERVICE_INFO_PLIST_DEV }}
         FIREBASE_OPTIONS_DART_DEV: ${{ secrets.FIREBASE_OPTIONS_DART_DEV_IOS }}
@@ -53,9 +48,7 @@ jobs:
         path: build/ios/iphoneos/Runner.app
 
   build_android:
-    runs-on: [X64]
-
-    
+    runs-on: [self-hosted, windows-latest]
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
