--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build_ios:
-    runs-on: [self-hosted, macos]
+    runs-on: [self-hosted]
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -70,7 +70,7 @@ jobs:
         path: build/ios/iphoneos/Runner.app
 
   build_android:
-    runs-on: [self-hosted, windows]
+    runs-on: [self-hosted]
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
