--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   plugin_platform_interface: ^2.1.8
   gql_websocket_link: ^2.0.0 #switch websocket protocal between graphql-ws or graphql-transparent-ws
   flutter_secure_storage: ^9.0.0 #securely saving data on both Android and iOS.
+  flutter_launcher_icons: ^0.9.3
+  logger: ^1.4.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
