exclude plist from artifact

--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -65,11 +65,8 @@ jobs:
         # Write Firebase options to a Dart file (firebase_options.dart)
         echo "${{ secrets.FIREBASE_OPTIONS_DART_DEV}}" > lib/firebase_options.dart
         dart analyze lib/firebase_options.dart
-
-        # Write the GOOGLESERVICE_INFO_PLIST_DEV secret to a file
-        echo "${{ secrets.GOOGLESERVICE_INFO_PLIST_DEV }}" > ios/Runner/GoogleService-Info.plist
       
-        flutter build ios --release --dart-define=HOST_ADDRESS=10.0.0.176 --dart-define=SERVER_PORT=8080 --dart-define=USE_EMULATOR=true --dart-define=EMULATOR_PORT=9099
+        flutter build ios --release --dart-define=HOST_ADDRESS=10.0.0.176 --dart-define=SERVER_PORT=8080 --dart-define=USE_EMULATOR=true --dart-define=EMULATOR_PORT=9099 
         # Cleanup: Delete sensitive files after build
         rm -f lib/firebase_options.dart
         rm -f ios/Runner/GoogleService-Info.plist
@@ -145,6 +142,8 @@ jobs:
         # Cleanup: Delete sensitive files after build
         rm -f lib/firebase_options.dart
         rm -f ios/Runner/GoogleService-Info.plist
+        # Remove sensitive plist from the built .app bundle
+        rm -f build/ios/iphoneos/Runner.app/GoogleService-Info.plist
 
     - name: Upload build artifacts (APK)
       if: ${{ env.RUNNER_OS == 'Windows' }}
