--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0 #securely saving data on both Android and iOS.
   flutter_launcher_icons: ^0.9.3
   logger: ^1.4.0
+  fluttertoast: ^8.0.9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
